--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <h1></>This is a test page</h1>
 <h2>test messages</h2>
-<<<<<<< HEAD
 <h3>change in master</h3>
-=======
-<h3>test branch</h3>
->>>>>>> test
+
+<h4>Updated the changes</h4>
